2006-08-16  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.4.4.

	* ebin/Makefile.am: Le fichier d'application `exmpp.app' n'était pas
	installé, c'est corrigé.

	* include/exmpp.hrl, src/exmpp_xml.erl (document_fragment_to_list):
	Support rudimentaire des Processing Instructions pour permettre à
	l'appelant de générer `<?xml version='1.0' ?>' par exemple.

	* include/exmpp.hrl: Ajout des namespaces pour les demandes de
	compression, de TLS et de SASL.

	* src/exmpp_factory.erl: Ajout de fonctions pour générer des stanzas
	de négociations de TLS et de la compression.

	* src/exmpp_xml.erl (xmlelement_to_xmlnselement,
	xmlelement_to_xmlnselement_and_ns_tables): Ajout de fonctions pour
	convertir les anciens tuples vers les nouveaux formats.
	(xmlnselement_to_xmlelement): Correction d'un bug où le cas d'un
	namespace sous forme de chaîne de caractères (au lieu d'atome) n'était
	pas géré.

2006-08-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.4.3.

	* src/ejabberd_zlib.erl, c_src/ejabberd_zlib_drv.c, configure.ac,
	src/Makefile.am, c_src/Makefile.am, ebin/Makefile.am: Import du module
	ejabberd_zlib d'ejabberd.

	* configure.ac: La gestion de relase empruntait encore le nom de
	libcalimero.

	* src/exmpp_xmlstream.erl: Corrections de la documentation.

	* testsuite/check_coverity.erl: On n'inclut pas exmpp.hrl.

	* testsuite/Makefile.am: style(9).

2006-07-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.4.2.

	* src/exmpp_xmlstream.erl: Correction de la documentation qui faisait
	encore référence à l'option `rootdepth' du parser XML (au lieu de
	`root_depth').
	(parse, process_elements, process_elements2, send_events): On gère un
	nouveau callback `none' qui indique que l'appeleur de parse/2 veut
	récupérer le résultat directement (au lieu de l'envoyer à un autre
	process/une autre fonction). La documentation est mise à jour en
	conséquence.

	* src/exmpp_xml.erl: New parser option `no_root_depth' to force the